# oceandata

./: .gitignore  LICENSE  README.rst  pyproject.toml
data/: GLOBAL_PE_W_LOV_2019.csv
src/oceandata/: __init__.py  gdp.py  mapps.py  oscillations.py  seabass_pic.py
src/oceandata/chl/: __init__.py  valente.py
src/oceandata/export_production/: __init__.py  mouw.py
src/oceandata/primary_production/: __init__.py  buitenhuis.py  hot.py  mattei.py  primary_production.py
src/oceandata/rrs/: valente.py
tests/: test_oceandata.py
