[tool.poetry]
name = "oceandata"
version = "0.3"
description = ""
authors = ["Bror Jonsson <brorfred@gmail.com>"]

[tool.poetry.dependencies]
python =  ">=3.7.1,<4.0"
pandas = ">1.1"
numpy = ">1.14"
requests = "^2.21"
click = "^7.0"
xlrd = "^2.0.1"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
