[tool.poetry]
name = "oceandata"
version = "0.3.2"
description = ""
authors = ["Bror Jonsson <brorfred@gmail.com>"]

[tool.poetry.dependencies]
python =  ">=3.10,<4.0"
pandas = ">1.2"
numpy = ">=1.26"
requests = ">=2.0"
click = ">=7.0"
xlrd = "^2.0.1"


[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"